// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render favorite 1`] = `
<a
  className="link-no-underline"
  href="#"
  onClick={[Function]}
>
  <FavoriteIcon
    favorite={true}
    size={16}
  />
</a>
`;

exports[`should render not favorite 1`] = `
<a
  className="link-no-underline"
  href="#"
  onClick={[Function]}
>
  <FavoriteIcon
    favorite={false}
    size={16}
  />
</a>
`;
